# express

./: .env.example  .gitignore  .gitmodules  .progress.md  PROMPT.md  README.md  pyproject.toml
express/: __init__.py  config.py  index.py  mcp_server.py
express/llm/: __init__.py  client.py  prompts.py
express/renderer/: __init__.py  engine.py  framebuffer.py
express/self_heal/: __init__.py  evaluator.py
express/tools/: __init__.py  render_expression.py  render_lua.py
research/: linux-framebuffer.md  mcp-server.md  spec.md  usagi-readme-full.md
tests/: test_config.py  test_engine.py  test_evaluator.py  test_framebuffer.py  test_llm_client.py  test_mcp_server.py  test_prompts.py  test_render_expression.py
