[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "express"
version = "0.1.0"
description = "MCP server: direct-to-hardware 2D visual expression via Usagi Engine"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]

[project.scripts]
express = "express.mcp_server:main"

[tool.setuptools.packages.find]
include = ["express*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
